--- a/index.html
+++ b/index.html
@@ -3,32 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
+  <article class="socials-card">
+    <picture class="socials-card__image">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar of Jessica">
+    </picture>
+    <main class="socials-card__content">
+      <h1 class="socials-card__content-name">Jessica Randall</h1>
+      <p class="socials-card__content-location">London, United Kingdom</p>
+      <p class="socials-card__content-bio">"Front-end developer and avid reader."</p>
+      <div class="socials-card__content--link-items">
+        <button class="button">GitHub</button>
+        <button class="button">Frontend Mentor</button>
+        <button class="button">LinkedIn</button>
+        <button class="button">Twitter</button>
+        <button class="button">Instagram</button>
+      </div>
+    </main>
+  </article>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">K Kidd</a>.
   </div>
 </body>
 </html>
